// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rearrange The length of the chain is even should return as expected 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 1,
    "next": LNode {
      "data": 8,
      "next": LNode {
        "data": 2,
        "next": LNode {
          "data": 7,
          "next": LNode {
            "data": 3,
            "next": LNode {
              "data": 6,
              "next": LNode {
                "data": 4,
                "next": LNode {
                  "data": 5,
                  "next": null,
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`Rearrange The length of the chain is odd should return as expected 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 1,
    "next": LNode {
      "data": 7,
      "next": LNode {
        "data": 2,
        "next": LNode {
          "data": 6,
          "next": LNode {
            "data": 3,
            "next": LNode {
              "data": 5,
              "next": LNode {
                "data": 4,
                "next": null,
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`Rearrange empty chain should return empty chain 1`] = `
LNode {
  "data": 0,
  "next": null,
}
`;
